--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/fortify": "*",
+        "laravel/fortify": "^1.21",
         "laravel/framework": "^11.9",
         "laravel/jetstream": "*",
         "laravel/sanctum": "^4.0",
