--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^11.9",
         "laravel/jetstream": "*",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "php-ffmpeg/php-ffmpeg": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
