--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/jetstream": "*",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "php-ffmpeg/php-ffmpeg": "^1.2"
+        "php-ffmpeg/php-ffmpeg": "^1.2",
+        "safaricom/mpesa": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
