--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bacon/bacon-qr-code": "^3.0",
+        "endroid/qr-code": "^5.0",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/fortify": "*",
         "laravel/framework": "^11.9",
